# MCMX-Compressor

./: .gitignore  CMakeLists.txt  README.md
source/: Archive.cpp  Archive.hpp  BracketModel.hpp  CM-inl.hpp  CM.hpp  Compressor.cpp  Compressor.hpp  CyclicBuffer.hpp  DeltaFilter.hpp  Detector.hpp  Dict.hpp  DivTable.hpp  Entropy.hpp  File.cpp  File.hpp  Filter.hpp  FilterTest.cpp  GD.hpp  HashTable.hpp  Huffman.cpp  Huffman.hpp  JPEG.hpp  LZ-inl.hpp  LZ.cpp  LZ.hpp  Log.hpp  MCM.cpp  MatchFinder.hpp  Memory.cpp  Memory.hpp  Mixer.hpp  Model.hpp  ProbMap.hpp  ProgressMeter.hpp  Range.hpp  Reorder.hpp  SSE.hpp  StateMap.hpp  Tests.cpp  Tests.hpp  (+8 more)
